--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ on:
 env:
   # AZURE_FUNCTIONAPP_NAME: "your-app-name" # set this to your function app name on Azure
   AZURE_FUNCTIONAPP_PACKAGE_PATH: "." # set this to the path to your function app project, defaults to the repository root
-  NODE_VERSION: "22" # set this to the node version to use (e.g. '8.x', '10.x', '12.x')
+  NODE_VERSION: "20" # set this to the node version to use (e.g. '8.x', '10.x', '12.x')
 
 permissions:
   id-token: write
@@ -26,15 +26,15 @@ jobs:
     runs-on: ubuntu-latest
     # environment: dev
     steps:
-      - name: "Checkout GitHub Action"
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node ${{ env.NODE_VERSION }} Environment
+      - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: "Resolve Project Dependencies Using Npm"
+      - name: Build app
         shell: bash
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
@@ -43,19 +43,27 @@ jobs:
           npm run test --if-present
           popd
 
-      - name: "Log in to Azure"
+      - name: Log in to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: "Run Azure Functions Action"
-        uses: Azure/functions-action@v1
-        id: fa
+      - name: Provision resources
+        uses: azure/arm-deploy@v2
+        id: provision
         with:
-          app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          resourceGroupName: ${{ secrets.AZURE_RESOURCE_GROUP_NAME }}
+          scope: resourceGroup
+          template: ./infra/main.bicep
+
+      - name: Deploy app
+        uses: Azure/functions-action@v1
+        with:
+          app-name: ${{ steps.provision.outputs.functionAppName }}
           package: .output/deploy.zip
           # slot-name: stage
-          # publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+#
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
