--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           resourceGroupName: ${{ secrets.AZURE_RESOURCE_GROUP_NAME }}
-          scope: resourceGroup
+          scope: resourcegroup
           template: ./infra/main.bicep
 
       - name: Deploy app
